# notebook-processor

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  directives.md  journal.md  plan.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture-optim-jupyter.md
examples/demo/input/: demo_assignment.ipynb  instructions.md
examples/jhu-demo/: emails.csv
examples/jhu-demo/raw/: homework.ipynb  instructions.md
examples/jhu-week9-midterm-project/: JHU_W9_Project_email_images_removed.ipynb  Project_Description_and_Criteria.md
src/notebook_processor/: __init__.py  __main__.py  archiver.py  benchmark_bridge.py  builder.py  cli.py  executor.py  exporter.py  models.py  parser.py  pipeline.py  project_layout.py  reembed.py  solver.py
src/notebook_processor/ingestion/: __init__.py  data_repair.py  ingestor.py  instruction_improver.py  inventory.py  manifest_generator.py  notebook_preprocess.py  transformations.py
tests/: conftest.py  create_fixture.py  test_archiver.py  test_benchmark_bridge.py  test_builder.py  test_cli.py  test_data_repair.py  test_executor.py  test_exporter.py  test_ingestion_models.py  test_ingestor.py  test_instruction_improver.py  test_inventory.py  test_manifest_generator.py  test_models.py  test_notebook_preprocess.py  test_parser.py  test_pipeline.py  test_project_layout.py  test_solver.py
tests/fixtures/: fixture_notebook.ipynb  instructions.md  sample_assignment.ipynb
tests/fixtures/ingestion/: fixture_data.csv  fixture_instructions.md
