[project]
name = "notebook-processor"
version = "0.1.0"
description = "Automated pipeline for processing Jupyter Notebook assignments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jean Remacle", email = "jean@remacle.lu"},
]
dependencies = [
    "nbformat>=5.0",
    "nbconvert>=7.0",
    "papermill>=2.6",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "charset-normalizer>=3.0",
    "benchmark-framework @ git+https://github.com/jeanremacle/benchmark-framework.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "ipykernel>=7.0",
]

[project.scripts]
notebook-processor = "notebook_processor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notebook_processor"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
